<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarSize="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        tools:context=".ui.calc.PaybackCalcFragment">


        <TextView
            android:id="@+id/paybackCalcTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/payback_calculator"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/paybackCalcSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fixed_sum_payback"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paybackCalcTitle" />

        <TextView
            android:id="@+id/calcPaybackText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/calc_payback_text1"
            android:textAlignment="textStart"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paybackCalcSmall" />

        <EditText
            android:id="@+id/editCalcPaybackText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="96dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/paybackCurrencyPerLiter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calcPaybackText1" />

        <TextView
            android:id="@+id/paybackCurrencyPerLiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/currency_per_l"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/editCalcPaybackText1"
            app:layout_constraintLeft_toRightOf="@+id/editCalcPaybackText1"
            app:layout_constraintTop_toTopOf="@+id/editCalcPaybackText1" />

        <TextView
            android:id="@+id/calcPaybackText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/calc_payback_text2"
            android:textAlignment="textStart"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editCalcPaybackText1" />

        <EditText
            android:id="@+id/editCalcPaybackText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="96dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/paybackCurrency"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calcPaybackText2" />

        <TextView
            android:id="@+id/paybackCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/currency"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/editCalcPaybackText2"
            app:layout_constraintLeft_toRightOf="@+id/editCalcPaybackText2"
            app:layout_constraintTop_toTopOf="@+id/editCalcPaybackText2" />

        <TextView
            android:id="@+id/calcPaybackText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/calc_payback_text3"
            android:textAlignment="textStart"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editCalcPaybackText2" />

        <EditText
            android:id="@+id/editCalcPaybackText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="96dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/paybackAssumedMileage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calcPaybackText3" />

        <TextView
            android:id="@+id/paybackAssumedMileage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/mileage_km"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/editCalcPaybackText3"
            app:layout_constraintLeft_toRightOf="@+id/editCalcPaybackText3"
            app:layout_constraintTop_toTopOf="@+id/editCalcPaybackText3" />

        <TextView
            android:id="@+id/calcPaybackText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/calc_payback_text4"
            android:textAlignment="textStart"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editCalcPaybackText3" />

        <EditText
            android:id="@+id/editCalcPaybackText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="96dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/paybackFuelConsumption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calcPaybackText4" />

        <TextView
            android:id="@+id/paybackFuelConsumption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/l_100km"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/editCalcPaybackText4"
            app:layout_constraintLeft_toRightOf="@+id/editCalcPaybackText4"
            app:layout_constraintTop_toTopOf="@+id/editCalcPaybackText4" />

        <TextView
            android:id="@+id/calcPaybackText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingTop="8dp"
            android:text="@string/calc_payback_text5"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editCalcPaybackText4" />

        <Button
            android:id="@+id/calculatePayback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorPrimary"
            android:onClick="onClickCalculate"
            android:paddingLeft="64dp"
            android:paddingTop="16dp"
            android:paddingRight="64dp"
            android:paddingBottom="16dp"
            android:text="@string/calculate"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calcPaybackText5" />

        <TextView
            android:id="@+id/calcPaybackTextResult1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingTop="8dp"
            android:text="@string/calc_payback_text_result1"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculatePayback" />

        <TextView
            android:id="@+id/calcPaybackTextResult2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:paddingTop="8dp"
            android:text="@string/calc_payback_text_result2"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calcPaybackTextResult1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>