<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
    android:layout_marginVertical="@dimen/activity_vertical_margin"
    tools:context=".ui.calc.MileageCalcFragment">

    <TextView
        android:id="@+id/mileageCalcTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mileage_calculator"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mileageCalcSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fixed_sum_mileage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mileageCalcTitle" />

    <TextView
        android:id="@+id/chooseTransport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/choose_transport"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mileageCalcSmall" />

    <ImageButton
        android:id="@+id/chooseCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:alpha="0.5"
        android:background="#00FFFFFF"
        android:contentDescription="Car"
        android:focusableInTouchMode="true"
        android:maxWidth="42dp"
        android:maxHeight="42dp"
        android:src="@drawable/car"
        app:layout_constraintEnd_toStartOf="@+id/chooseVan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseTransport" />

    <ImageButton
        android:id="@+id/chooseVan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:background="#00FFFFFF"
        android:contentDescription="Truck"
        android:focusableInTouchMode="true"
        android:maxWidth="42dp"
        android:maxHeight="42dp"
        android:src="@drawable/van"
        app:layout_constraintEnd_toStartOf="@+id/chooseTruck"
        app:layout_constraintStart_toEndOf="@+id/chooseCar"
        app:layout_constraintTop_toTopOf="@+id/chooseCar" />

    <ImageButton
        android:id="@+id/chooseTruck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:background="#00FFFFFF"
        android:contentDescription="Van"
        android:filterTouchesWhenObscured="false"
        android:focusableInTouchMode="true"
        android:maxWidth="42dp"
        android:maxHeight="42dp"
        android:src="@drawable/truck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chooseVan"
        app:layout_constraintTop_toTopOf="@+id/chooseVan" />

    <TextView
        android:id="@+id/chooseChargeAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/choose_charge_amount"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseCar" />

    <EditText
        android:id="@+id/getChargeAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseChargeAmount" />

    <TextView
        android:id="@+id/mileagePLNCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/currency"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/getChargeAmount"
        app:layout_constraintStart_toEndOf="@+id/getChargeAmount"
        app:layout_constraintTop_toTopOf="@+id/getChargeAmount" />

    <Button
        android:id="@+id/calculateMileage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="64dp"
        android:paddingTop="16dp"
        android:paddingRight="64dp"
        android:paddingBottom="16dp"
        android:text="@string/calculate"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getChargeAmount" />

    <TextView
        android:id="@+id/resultMileageCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/result_mileage_calc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateMileage" />

</androidx.constraintlayout.widget.ConstraintLayout>